--- a/.github/workflows/linting_and_formatting.yml
+++ b/.github/workflows/linting_and_formatting.yml
@@ -26,7 +26,11 @@ jobs:
     - name: Install library and dependencies
       run: |
         poetry run pip install --upgrade pip setuptools
-        poetry install --with linters
+        poetry install --no-interaction
+
+    - name: Check pyproject.toml with Poetry
+      run: |
+          poetry check --strict
 
     - name: Lint and Format with Ruff
       run: |
