--- a/.github/workflows/linting_and_formatting.yml
+++ b/.github/workflows/linting_and_formatting.yml
@@ -15,6 +15,11 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
+    - name: Install Pyright
+      # Note: npm is already installed because it's included in the GH Actions imate
+      run: |
+        npm install -g pyright
+
     - name: Set up Python 3.10
       uses: actions/setup-python@v5
       with:
@@ -40,3 +45,7 @@ jobs:
     - name: Check Types with Mypy
       run: |
         poetry run mypy -p cy_serial_bridge
+
+    - name: Lint with Pyright
+      run: |
+        poetry run pyright
